Call for exhibitor and footer in progress

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,4 +94,86 @@ li a:hover:not(.active) {
   font-size: 48px;
 }
 
+/* subscribe section and footer*/
+.exhibition {
+  width: 90%;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+.exhibition .subscribe {
+  font-style: normal;
+  font-size: 19px;
+  line-height: 24px;
+  width: 40%;
+}
+.exhibition .subscribe .sub_text {
+  width: 170px;
+  margin-left: 70px;
+  margin-top: -45px;
+}
+.exhibition .subscribe .sub {
+  font-size: 23px;
+  color: #1F2041;
+  font-weight: bold;
+}
+.exhibition .subscribe p {
+  width: 280px;
+  line-height: 24px;
+  margin-top: 30px;
+  color: rgba(31, 32, 65, 0.75);
+}
+.exhibition .subscribe input {
+  width: 280px;
+  height: 44px;
+  background: #ffffff;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin: 30px 0;
+  text-align: center;
+}
+.exhibition .exhibit {
+  background: #132D7D;
+  float: right;
+  min-height: 200px;
+  width: 60%;
+  text-align: center;
+  padding: 40px 0;
+}
+.exhibition .exhibit .call {
+  color: #ffffff;
+  width: 671px;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 72px;
+  text-align: center;
+}
+.exhibition .exhibit button {
+  width: 280px;
+  height: 44px;
+  margin: 30px 0;
+  border-radius: 30px;
+  background: #ffffff;
+  border: none;
+}
+
+.footer {
+  text-align: center !important;
+  width: 100%;
+  margin: 70px 0;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 24px;
+}
+.footer p {
+  width: 560px;
+  font-size: 14px;
+  margin: 0 auto;
+  color: rgba(31, 32, 65, 0.75);
+}
+.footer .icon img {
+  margin: 20px 10px;
+}
+
 /*# sourceMappingURL=style.css.map */
