--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,8 +172,14 @@ li a:hover:not(.active) {
   margin: 0 auto;
   color: rgba(31, 32, 65, 0.75);
 }
-.footer .icon img {
+.footer .icon .fa {
   margin: 20px 10px;
+  font-size: 24px;
+  text-decoration: none;
+  color: #bc9cff;
+}
+.footer .icon .fa:hover {
+  color: #8BA4F9;
 }
 
 /*# sourceMappingURL=style.css.map */
