--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -15,6 +15,9 @@ body {
     background: $white;
     color: $blue;
 }
+a{
+    text-decoration: none;
+}
 
 #col{
     margin-top: 10%;
@@ -67,11 +70,12 @@ h1{
             text-align: center;
             display: block;
             color: grey;
+
+            &:hover{
+                color: $blue;
+            }
         }
-    
-        li a:hover:not(.active) {
-            background-color: #111;
-        }
+        
     }
 
     .active {
@@ -258,11 +262,16 @@ h1{
     }
 
     button{
+        font-size: 16px;
         width: 280px;
         height: 44px;
         margin: 30px 0;
         border-radius: 30px;
         border: none;
+
+        i{
+            margin-left: 10px;
+        }
     }
     .subscribe{
         font-style: normal;
@@ -309,6 +318,7 @@ h1{
             }
             p{
                 color: $white;
+                margin: 0 auto;
             }
         }
     
