--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -43,8 +43,9 @@ h1 {
     background-color: #ffffff;
     text-align: right;
     float: right;
+    padding: 10px;
   }
-  .navbar .collapse #iconImage, .navbar .collapse #subscribeIcon {
+  .navbar .collapse .iconImage {
     display: none;
   }
 }
@@ -76,10 +77,7 @@ h1 {
 .navbar .active {
   color: #132D7D;
 }
-.navbar #iconImage {
-  margin: 0 auto;
-}
-.navbar #subscribeIcon img {
+.navbar .subscribeIcon img {
   padding: 5px 10px;
   margin: 0 5px;
 }
@@ -225,7 +223,7 @@ h1 {
     text-align: center;
   }
   .exhibition .subscribe .sub_text {
-    margin: 0px !important;
+    margin: 10px 0 !important;
     width: 100% !important;
   }
   .exhibition .subscribe p {
@@ -275,6 +273,7 @@ h1 {
   color: rgba(31, 32, 65, 0.75);
 }
 .exhibition .subscribe input {
+  color: rgba(31, 32, 65, 0.75);
   width: 280px;
   height: 44px;
   background: #ffffff;
