--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -123,40 +123,47 @@ h1{
     background-position: center center;
 
     #sub-main {
-        background-color: #132d7dc2;
+        background-color: $blue;
+        mix-blend-mode: hard-light;
         height: 100%;
         width: 100%;
+        
+        #sub{
+            background: linear-gradient(90deg, #5E239D 0%, rgba(196, 196, 196, 0) 56.77%);
+            mix-blend-mode: hard-light;
+            
+            #sub-main-details {
+                width: 100%;
+                margin: 0 auto;
+                font-size: 90px;
+                color: #f0efff;
+                padding: 150px 100px;
+                font-weight: bolder;
+                line-height: 1.18;
+
+                @media only screen and (max-width: 890px){
+                    font-size: 75px;
+                }
+                @media only screen and (max-width: 748px){
+                    font-size: 60px;
+                }
+                @media only screen and (max-width: 644px){
+                    font-size: 40px;
+                    padding: 100px 50px;
+                }
+
+                #sub-main-details-small {
+                    line-height: 2.5;
+                    font-size: 48px;
+            
+                    @media only screen and (max-width: 644px){
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
     }
 
-    #sub-main-details {
-        width: 100%;
-        margin: 0 auto;
-        font-size: 90px;
-        color: #f0efff;
-        padding: 150px 100px;
-        font-weight: bolder;
-        line-height: 1.18;
-
-        @media only screen and (max-width: 890px){
-            font-size: 75px;
-        }
-        @media only screen and (max-width: 748px){
-            font-size: 60px;
-        }
-        @media only screen and (max-width: 644px){
-            font-size: 40px;
-            padding: 100px 50px;
-        }
-    }
-
-    #sub-main-details-small {
-        line-height: 2.5;
-        font-size: 48px;
-
-        @media only screen and (max-width: 644px){
-            font-size: 20px;
-        }
-    }
 }
 
 /* what goes on section */
