Width overflow fixed and responsiveness intact

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -31,6 +31,10 @@ h1 {
   font-weight: bolder;
 }
 
+.display .row, .what-goes-on .row {
+  margin: 0px !important;
+}
+
 /*navbar and intro*/
 .navbar {
   height: 55px;
@@ -152,6 +156,16 @@ h1 {
 }
 
 /* what goes on section */
+.what-goes-on {
+  width: 90%;
+  margin: 0 auto;
+}
+@media screen and (max-width: 900px) and (min-width: 768px) {
+  .what-goes-on .col-md-4 {
+    max-width: 50% !important;
+    flex: 50%;
+  }
+}
 .what-goes-on .card-img-top {
   height: 100px;
   width: 30%;
@@ -189,16 +203,6 @@ h1 {
 
 .card-title {
   font-weight: bolder;
-}
-
-.what-goes-on {
-  margin-left: 40px;
-}
-@media screen and (max-width: 900px) and (min-width: 768px) {
-  .what-goes-on .col-md-4 {
-    max-width: 50% !important;
-    flex: 50%;
-  }
 }
 
 /*display section*/
